removing extra padding, no longer needed

--- a/app/templates/ui/styles/theme.less
+++ b/app/templates/ui/styles/theme.less
@@ -208,7 +208,3 @@ input.vertical {
   height: 100px;
   writing-mode: bt-lr;
 }
-
-.padtop {
-  padding-top: 30px;
-}
